--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -34,6 +34,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
     "@types/sqlite3": "3.1.11",
+    "@types/validator": "^13.15.4",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.39.0",
@@ -62,6 +63,7 @@
     "jose": "^6.1.0",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
-    "sqlite3": "5.1.7"
+    "sqlite3": "5.1.7",
+    "validator": "^13.15.23"
   }
 }
